--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "react": "17.0.2",
