--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-icons": "^3.0.0",
     "axios": "^0.27.2",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
