--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@hookform/resolvers": "^2.9.6",
     "@types/react-icons": "^3.0.0",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "next": "10.2.0",
+    "next-auth": "^4.10.2",
     "next-images": "^1.7.0",
     "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
@@ -19,6 +21,7 @@
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.0",
     "yup": "^0.32.11"
   },
